# satnetSimulation

./: Cargo.toml
src/: components.rs  main.rs  movement.rs  protocols.rs  ui.rs
